<resources>
    <string name="app_name">Unknown Client</string>
    <string name="tv_bienvenido">Welcome to Unknown Client</string>
    <string name="tv_explicar">This screen will be displayed at the first start or every time the accessibility permission has been disabled, keep in mind that starting from android 10, sometimes this permission is automatically removed by android for security reasons.</string>
    <string name="tv_accesibilidad">Accessibility permission</string>
    <string name="tv_obligatorio">(obligatory)</string>
    <string name="uc_descripcion">This permission is required for Unknown Client to work. Your private data will not be collected and this permission will also not be used for any other reason than for the purpose of using Unknown Client.</string>
    <string name="tv_opcional">(optional)</string>
    <string name="tv_conceder">Grant</string>
    <string name="tv_bateria">Battery optimization</string>
    <string name="btn_continuar">Continue</string>
    <string name="tv_atacar">Attack</string>
    <string name="tv_estado_uc">Unknown Client Status</string>
    <string name="tv_activado">Active</string>
    <string name="tv_desactivado">Inactive</string>
    <string name="btn_desactivar">Deactivate</string>
    <string name="btn_activar">Activate</string>
    <string name="tv_mensaje">Message</string>
    <string name="tv_cantidad">Number of messages</string>
    <string name="tv_ajustes_mensaje">Message settings</string>
    <string name="rb_ninguno">None</string>
    <string name="rb_estilo_negrita">Message style \"bold\"</string>
    <string name="rb_estilo_italica">Message style \"italic\"</string>
    <string name="rb_estilo_monoespaciado">\"Monospaced\" Message</string>
    <string name="rb_estilo_tachado">\"Strikethrough\" Message</string>
    <string name="rb_estilo_vacio">\"Empty\" Message</string>
    <string name="rb_estilo_invertir">Reverse message</string>
    <string name="toast_entrada_vacia">Please write the message you want to send.</string>
    <string name="restablecer">Restore</string>
    <string name="acerca">About</string>
    <string name="tv_acerca">About...</string>
    <string name="tv_dialogo_resumen">Unknown Client is an open source project developed at the end of 2014. Its purpose is to automatically send a certain number of messages to contacts or WhatsApp groups.</string>
    <string name="tv_codigo_fuente">Source code:</string>
    <string name="tv_github">Github</string>
    <string name="tv_unknown60">Developed by Unknown-60</string>
    <string name="btn_aceptar">accept</string>
    <string name="tv_cambios">Changelog</string>
</resources>
