<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
	xmlns:android="http://schemas.android.com/apk/res/android"
	android:orientation="vertical"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	android:background="@drawable/bg_dialogo">

	<LinearLayout
		android:orientation="vertical"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:padding="15dp">

		<TextView
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:text="@string/tv_acerca"
			android:textSize="19sp"
			android:textColor="@color/colorRojo"
			android:textStyle="bold"/>

		<TextView
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:text="@string/tv_dialogo_resumen"
			android:padding="10dp"
			android:textSize="16sp"
			android:textColor="@color/colorVerde"/>

		<LinearLayout
			android:orientation="horizontal"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content">

			<TextView
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:text="@string/tv_codigo_fuente"
				android:textColor="@color/colorVerde"
				android:textSize="16sp"
				android:paddingLeft="10dp"
				android:paddingBottom="10dp"
				android:paddingTop="10dp"/>

			<TextView
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:text="@string/tv_github"
                android:background="?attr/selectableItemBackground"
                android:clickable="true"
				android:textColor="@color/colorLink"
				android:padding="10dp"
				android:textSize="16sp"
				android:id="@+id/tv_github"/>

		</LinearLayout>

		<TextView
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:text="@string/tv_unknown60"
			android:padding="10dp"
			android:textSize="16sp"
			android:textColor="@android:color/white"
			android:textStyle="italic"/>

	</LinearLayout>

	<LinearLayout
		android:orientation="horizontal"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:padding="10dp"
		android:gravity="right|center_vertical">

		<Button
			android:layout_width="wrap_content"
			style="?android:attr/buttonBarButtonStyle"
			android:layout_height="wrap_content"
			android:text="@string/btn_aceptar"
			android:id="@+id/btn_cerrar"
			android:textColor="@color/colorVerde"/>

	</LinearLayout>

</LinearLayout>

